# server-openapi/src/main/openapi/cdoc2-key-capsules-openapi.yaml
@@ -37,6 +37,21 @@ paths:
           required: true
           schema:
             type: string
+        - in: header
+          name: X-Recipient-Id
+          required: true
+          schema:
+            type: string
+        - in: header
+          name: X-Timestamp
+          required: true
+          schema:
+            type: string
+        - in: header
+          name: X-Signature
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: OK
@@ -66,6 +81,7 @@ components:
       required:
         - capsuleType
         - recipientId
+        - recipientMldsaPublicKey
         - ephemeralKeyMaterial
       properties:
         capsuleType:
@@ -81,6 +97,9 @@ components:
             - RSA
             - MLKEM768
         recipientId:
+          type: string
+          format: byte
+        recipientMldsaPublicKey:
           type: string
           format: byte
         ephemeralKeyMaterial:
